# Zion

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT_STATUS.md  DOCKER_BUILD_LOG_20250919.md  Dockerfile  GENESIS_BLOCK_INFO.md  GPT5_COMPLETE_KNOWLEDGE_BASE.md  GPT5_HANDOVER.md  GPT5_MINING_MISSION.md  MINING_SETUP_LOG.md  MINING_TROUBLESHOOTING_FOR_GPT5.md  PRODUCTION_GUIDE.md  README.md  SECURITY_WHITELIST.md  SERVER_DEPLOYMENT_SUMMARY.md  WARP.md  deploy-hetzner.sh  deploy-pool.sh  deploy-ssh.sh  docker-compose.pool.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
.warp/: workflows.yaml
adapters/uzi-pool-config/: config.json
adapters/uzi-pool-config/coins/: zion.json
adapters/zion-rpc-shim/: server.js
config/: OFFICIAL_GENESIS_WALLET.conf  genesis_wallet.conf  mainnet.conf  prod.conf  production-v2.conf  production-v2.ini
data/amenti/: library.json  schema.json
docker/: Dockerfile.zion-cryptonote  Dockerfile.zion-cryptonote.minimal  compose.pool-seeds.yml  compose.test-miner.yml  compose.zion-cryptonote.yml  deploy.sh  entrypoint.sh  xmrig.config.json
docker/node/: zion.conf
docker/seed1/config/: zion.conf
docker/seed2/config/: zion.conf
docker/uzi-pool/: Dockerfile  entrypoint.sh  patch-rx.js
docs/: AMENTI_LOG_INDEX.md  BRANDING.md  MAINNET_LAUNCH.md  PROJECT_LOG.md  mobile-library.md
docs/dapp/: amenti-integration.md
docs/sessions/2025-09-19/: ai-session-2025-09-19.md  idea.md  session-011013.md
docs/sessions/2025-09-20/: session-003157.md
frontend/: README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/amenti/: page.tsx
frontend/app/components/: ThemeShell.tsx
frontend/app/hub/: page.tsx
frontend/app/miner/: page.tsx
frontend/app/utils/: zion.ts
frontend/app/wallet/: page.tsx
include/: block.h  config.h  zion.h  zion_miner_c.h
include/network/: http_status.h  pool.h
logs/: DEPLOYMENT_2025-09-20_POOL_RANDOMX_STATUS.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_UPDATE_20250919_2012.md  DEPLOYMENT_UPDATE_20250920_GENESIS_HUB_AND_MINER_UI.md  DEPLOYMENT_UPDATE_20250920_MOON_SUN_STAR_SUMMARY.md  DEPLOYMENT_UPDATE_20250920_NODE_INSTALLER_AND_RPC_SHIM.md  DEPLOYMENT_UPDATE_20250920_RPC_SHIM_FALLBACKS.md  DEPLOYMENT_UPDATE_20250920_RPC_SHIM_FALLBACKS_BYPASS.md  DEPLOYMENT_UPDATE_20250920_SSH_KEYS_AND_QUICK_RESTART.md  DEPLOYMENT_UPDATE_20250920_UZI_POOL_STATUS.md  FUTURE_ROADMAP.md  HANDOVER_SONNET_2025-09-20.md  MAITREYA_WINDOWS_RYZEN_2025-09-20.md  MINER_TEST_GUIDE_2025-09-20.md  MINING_SETUP_LOG.md  POOL_AUTH_MINING_WALLET_FIX_20250920.md  PRODUCTION_DEPLOYMENT_SUCCESS.md  README.md  SESSION_2025-09-19_FINAL.md  ZION_V2_RANDOMX_GENESIS_DEPLOYMENT_20250920.md  my.md
logs/archive/20250920_original/: CHANGELOG.md  DEPLOYMENT_GUIDE.md  my.md  (+10 more)
logs/hosts/: MAITREYA_PROFILE.json
mining/: start-mining-linux.sh  start-mining-macos.sh  start-mining-windows.bat  start-mining.sh
mining/xmrig-6.21.3/: config-zion.json
scripts/: cleanup_workspace.sh  deploy-ssh-pool.sh  quick-restart-remote.sh  ssh-redeploy-pool.sh  ssh-tunnel-maitreya.ps1
src/core/: block.cpp  blockchain.cpp  config.cpp
src/daemon/: main.cpp
src/mining/: miner.cpp  miner_c.cpp  miner_v2.cpp
src/network/: http_status.cpp  pool.cpp
tests/: CMakeLists.txt  test_miner_c.c
web/: .gitignore  Dockerfile  README.md  next.config.js  package.json
web/pages/: index.tsx
web/styles/: Home.module.css  globals.css
(+1 files in other folders)
